tests/snapshots/examples_fixtures/generics__failing__compile__ki_074_lowercase_class_in_where.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/generics/failing/compile/ki_074_lowercase_class_in_where.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Function Body

This function body needs to start with `{`.

  examples/generics/failing/compile/ki_074_lowercase_class_in_where.flx:25:26
   |
25 | fn twice<a>(x: a) -> Int where sz<a> {
   |                          ^^^^^
   |                          ----- This looks like the function body

   | - `twice` starts here

Note:
  while parsing function `twice`

Help:
  Try adding `{` after the function signature.
== stdout ==
<not executed>
